# rp-commander

./: CLAUDE.md  CMakeLists.txt  Dockerfile  Makefile  README.md  WIRING.md  pico_sdk_import.cmake
.github/workflows/: build.yml  pages.yml
KiCad/rp-commander/: rp-commander.kicad_pcb  rp-commander.kicad_prl  rp-commander.kicad_pro  rp-commander.kicad_sch
docs/: index.html
src/: buttons.c  buttons.h  cdc_config.c  cdc_config.h  config.h  config_store.c  config_store.h  encoder.c  encoder.h  font.c  font.h  icons.c  icons.h  lcd.c  lcd.h  main.c  profiles.c  profiles.h  tusb_config.h  ui.c  ui.h  usb_descriptors.c  usb_hid.c  usb_hid.h
step1_hw_test/: step1_hw_test.ino
step2_usb_hid/: step2_usb_hid.ino
tools/: commander.py  make_icons.py
